1/26/2024
	Added support fo QuattroQuadri
	Fixed/added support for countSolutions printing all solutions for non 9x9 grids

1/16/2024
	Fixed error in affineTransformSudoku class

1/6/2024
	Added support for fast thermos
	Added support for forbidden consecutive sums, generalizing no-seven rules.

12/29/2023
	Added support for shaken clone regions (h/t Bill Murphy...thanks!)

12/24/2023
	Added new tests
	Fixed error in missing arrow code for length 2 arrows.

12/20/2023
	Added support for diagonal mirrors and anti-mirrors. (h/t Xeon Risq for Magnitude and Primality ideas)
	Added support for ascending starter clues (h/t Bill Murphy...thanks!)
	Added support for diagonal consecutive pairs (h/t Philip Newman...thanks!)
	Added support for zipper lines

5/13/2023
	Added support for Knapp Daneben cages...thanks clover!

5/11/2023	
	Added support for renrenbanban lines, h/t DarthParadox...thanks!
	Added support for consecutive chain regions, h/t/ clover!...thanks!
	Added support for consecutive lines
	Added support for Sum Sandwiches, h/t clover!...thanks!

2/17/2023	
	Added support for Outside Diagonal clues, per issue #31...inspired by Sudoku Mahabharat 2023 Round 2, h/t/ to Bill Murphy
	Added support for XY-difference pairs, per issue #32...inspired by glum_hippo, h/t to clover!
	Added support for Rotational Pairs constraint

2/12/2023
	Added test cases for Double X-Sums and Broken 159/Gamma Epsilon
	Added support for Skyscraper Sums, which clue the sum of the Skyscrapers seen...inspired by ICHTUES

2/11/2023	
	Added alias for Gamma-Epsilon rules.
	Updated input for indexing rows and columns to allow a purely negative constraint (i.e., no cells in row/col true)
	Added debug output to support resolution of Issue #25

2/3/2023
	Added support for repelling digits, inspired by pirate sudoku...thanks clover!
	Added support for punctured cages, inspired by zetamath...thanks!
	Added test cases

1/15/2023
	Added support for magic lines...thanks Raumplaner!